Added support for most recent versions, Director 2.7, CDH 5.14, CDSW 1.3, Spark 2.3.  Cleaned up CDSW support with new Director features.

--- a/aws.conf
+++ b/aws.conf
@@ -2,7 +2,10 @@ include file("general.conf")
 
 include file("s3.conf")
 
-environmentName: ${PREFIX} AWS Environment
+environmentName: ${?PREFIX} AWS Environment
+
+blockDevice1: /dev/xvf
+blockDevice2: /dev/xvg
 
 # Cloud provider configuration (credentials, region or zone and optional default image)
 provider {
