--- a/azure.conf
+++ b/azure.conf
@@ -1,6 +1,9 @@
 include file("general.conf")
 
-environmentName: ${PREFIX} Azure Environment
+environmentName: ${?PREFIX} Azure Environment
+
+blockDevice1: /dev/sdb
+blockDevice2: /dev/sdc
 
 # Cloud provider configuration (credentials, region or zone and optional default image)
 provider {
