--- a/gcp.conf
+++ b/gcp.conf
@@ -1,6 +1,9 @@
 include file("general.conf")
 
-environmentName: ${PREFIX} GCP Environment
+environmentName: ${?PREFIX} GCP Environment
+
+blockDevice1: /dev/sdb
+blockDevice2: /dev/sdc
 
 # Cloud provider configuration (credentials, region or zone and optional default image)
 provider {
@@ -12,7 +15,7 @@ provider {
 }
 
 common-instance-properties {
-    image: centos7
+    image: "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-7-v20171018"
 }
 
 instances {
