--- a/general.conf
+++ b/general.conf
@@ -1,7 +1,7 @@
 include file("../secrets/provider-keys.conf")
 
-name: ${PREFIX} Cluster
-deploymentName: ${PREFIX} Deployment
+name: ${?PREFIX}${?POSTFIX} Cluster
+deploymentName: ${?PREFIX}${?POSTFIX} Deployment
 
 provider {
     instanceNamePrefix: ${PREFIX}-cd
