--- a/cloudera-manager.conf
+++ b/cloudera-manager.conf
@@ -8,16 +8,15 @@ cloudera-manager {
     }
 
     csds: [
-        "http://archive.cloudera.com/spark2/csd/SPARK2_ON_YARN-2.2.0.cloudera1.jar"
+        "https://archive.cloudera.com/cdsw/1/csd/CLOUDERA_DATA_SCIENCE_WORKBENCH-1.3.0.jar",
+        "http://archive.cloudera.com/spark2/csd/SPARK2_ON_YARN-2.3.0.cloudera2.jar"
     ]
 
     enableEnterpriseTrial: true
     unlimitedJce: true
 
-    repository: "http://archive.cloudera.com/cm5/redhat/7/x86_64/cm/5.12/"
+    repository: "http://archive.cloudera.com/cm5/redhat/7/x86_64/cm/5.14/"
     repositoryKeyUrl: "http://archive.cloudera.com/cm5/redhat/7/x86_64/cm/RPM-GPG-KEY-cloudera"
 
-    configs {
-        HOSTS { "java_home" : "/usr/java/default" }
-    }
+    javaInstallationStrategy: NONE
 }
